# good-360-bids

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  ARCHITECTURE.md  CODEBASE.md  DEVTOOLS_MCP_CHECKOUT.md  Dockerfile  HANDOFF_2026-06-12.md  PHASE_2B_PLAN.md  POSTMORTEM_2026-04-13.md  ROSTER_PROJECT_BRIEF.md  RUNBOOK.md  SCRUB_PLAN.md  WORKFLOW.md  _readiness_check_all.py  _test_live_autobuy_fake_card.py  audit_log.py  config.py  deadman_switch.py  docker-compose.deadman.yml  docker-compose.feature.yml  docker-compose.staging.yml  docker-compose.yml  feature_flags.py  good360_autobuy.py  good360_daemon.py  good360_devtools_agent.py  good360_monitor.py  good360_orgs_master.example.json  good360_report.py  good360_restore.sh  good360_telegram_bot.py  good360_watchdog.py  healthcheck.py  intake_config_final.yml  logging_config.py  notifications_log.py  purchase_lock.py  (+9 more)
caddy/: Caddyfile
good360_roster/: admin_cli.py  billing_manager.py  dashboard.py  dashboard_data.py  good360_autobuy_v2.py  good360_bridge.py  health_checker.py  notifier.py  queue_manager.py  roster_orchestrator.py  schema.py  vault.py
intake_form/: index.html  server.py
missioncontrol/: admin_routes.py  auth.py  customer_readiness.py  db.py  diagnose.py  login_telemetry.py  order_verifier.py  quickbeed.py  quickbeed_roster_sync.py  secrets_store.py  server_v2.py  test_runner.py
scripts/: deploy-feature.sh  deploy-prod.sh  deploy-staging.sh  make_nonprod_env.py  roster_parity_check.py
tests/: conftest.py  test_abort_redirect.py  test_audit_log.py  test_business_rules.py  test_buyer_history.py  test_buyer_lifecycle.py  test_card_guardrail.py  test_config.py  test_cooldown_sync.py  test_daemon_wedge_fix.py  test_deadman_switch.py  test_healthcheck.py  test_monitor_fixes.py  test_order_total_capture.py  test_queue_remove.py  (+8 more)
(+11 files in other folders)
